--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "package"]
 	path = package
 	url = https://github.com/soyjavi/package-tuktuk
+[submodule "stylesheets/CSSmethods"]
+	path = stylesheets/CSSmethods
+	url = https://github.com/soyjavi/CSSmethods.git
