--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "Tuktuk",
   "description": "Simple (but powerful) RWD Framework",
-  "version": "0.7.7",
+  "version": "0.9.0",
   "homepage": "http://tuktuk.tapquo.com",
   "author": {
     "name": "Javi Jimenez",
     "site": "https://twitter.com/soyjavi"},
-  "license": [ {"type": "GPLv3"} ],
+  "license": [ {"type": "MIT"} ],
   "devDependencies": {
     "grunt": "*",
     "grunt-contrib-coffee": "*",
