--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "sources/components/CSSmethods"]
-	path = sources/components/CSSmethods
-	url = git://github.com/soyjavi/CSSmethods.git
+[submodule "/package"]
+	path = /package
+	url = https://github.com/soyjavi/package-tuktuk.git
